--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "studubud/wsgi.py"
+            "dest": "studybud/wsgi.py"
         }
     ]
 }
